tests/baselines/reference/deprecatedCompilerOptionsBaseUrl.errors.txt
/foo/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== /foo/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": "./src",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
            "paths": {
                "@app/*": ["app/*"],
                "@lib/*": ["lib/*"]
            }
        }
    }
    
==== /foo/src/app/module.ts (0 errors) ====
    export const value = 42;
    
==== /foo/src/main.ts (0 errors) ====
    import { value } from "@app/module";
    const result = value;